--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ background-color: var(--white);
 .page8 {
   padding-top: 10px;
   height: calc(100vh - 65px);
-  background-color: var(--background);
+  background-color: var(--accent);
 }
 
 .page8 .centered p{
@@ -923,7 +923,7 @@ grid-row: 1 / span 1;
 
 
 a {
-  color: var(--accent);
+  color: var(--background);
   text-decoration: none;
 }
 
@@ -1472,6 +1472,16 @@ li::marker {
     transform: translateX(-140px);
   }
 
+
+
+}
+
+@media(max-width: 1380px){
+  .image-cont > .img-img{
+    width:100% !important;
+    height: 20vh !important;
+    aspect-ratio: 2.5/1 !important;
+  }
 }
 
 
@@ -1527,6 +1537,7 @@ li{
 
   .image-cont > .img-img{
     width:100% !important;
+    height: 20vh !important;
     aspect-ratio: 2.5/1 !important;
   }
 
@@ -1841,8 +1852,8 @@ font-size: 45px;
 
 .image-grid{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));;
-  max-width: 80rem;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));;
+  width: 90%;
   margin-inline: auto;
   position: relative;
   padding-top: 4rem;
