--- a/css/style.css
+++ b/css/style.css
@@ -448,10 +448,7 @@ background-color: white;
 }
 
 .page4 {
-  background-color: var(--accent);
   padding-bottom: 10px;
-  height: calc(100vh - 65px);
-
 }
 
 .page5 {
@@ -722,7 +719,7 @@ height: 300px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 46vh 46vh;
-
+  background:var(--accent);
 }
 
 .where {
@@ -836,12 +833,30 @@ grid-row: 1 / span 1;
   grid-row: 2 / span 1;
 }
 
+.secondQ,.switch{
+  grid-row: 4;
+}
+
 .allergies{
   grid-column: 1 / span 2;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto 1fr;
   column-gap: 10px;
+}
+
+.allergies>label,.allergies2>label{
+  background: var(--white);
+  color:var(--accent);
+  padding: 5px 12px;
+  border-radius: 30px;
+  grid-row: 2;
+  align-self: center;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  border:solid 2px var(--accent);
+  font-size: 12px;
 }
 
 .allergies2{
@@ -861,20 +876,6 @@ grid-row: 1 / span 1;
 .allergies2>p{
   grid-row: 1 / span 1;
   grid-column: 1 / span 4;
-}
-
-.gflabel,.nutlabel,.veganlabel{
-  background: var(--white);
-  color:var(--accent);
-  padding: 5px 8px;
-  border-radius: 5px;
-  grid-row: 2;
-  align-self: center;
-  height: 40px;
-  display: grid;
-  align-items: center;
-  text-align: center;
-  border:solid 2px var(--accent);
 }
 
 input[type='checkbox']{
@@ -1757,7 +1758,7 @@ font-size: 28px;
 
 form{
   grid-template-columns: 50% 50%;
-  grid-template-rows: 40px 40px 40px 40px 40px;
+  grid-template-rows: 60px 60px 1fr 60px auto auto 60px;
 }
 
 .centered h1{
