--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,14 @@
   --test: 150;
   --roundedcorner: 12px;
   --green: rgb(202, 225, 207);
-  --gray:#ccc;
+  --gray:#eaeaea;
   --darkgreen: rgb(89, 130, 92);
   --griddefault: 20% auto 8% 8% 8% 8% 8% 8%;
   --grid1480: 20% auto 15% 10% 10% 10% 15% 15%;
   --grid830: 20% auto  25%;
   --radius: 15px;
+  --lightgray:#eaeaea;
+  --graytext:#757575;
 }
 /*  --accent: rgb(72, 81, 113); */
 body {
@@ -251,7 +253,22 @@ grid-column: 2;
   margin: auto;
 }
 
+.switch2 {
+  position: relative;
+  display: inline-block;
+  width: 120px;
+  height: 34px;
+  margin-top: 10px;
+  margin: auto;
+}
+
 .switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switch2 input { 
   opacity: 0;
   width: 0;
   height: 0;
@@ -801,7 +818,7 @@ height: 300px;
 
 
 .centered {
-  width: 40%;
+  width: 60%;
   margin: auto;
 }
 
@@ -813,14 +830,24 @@ height: 300px;
 form{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 60px 60px 1fr 60px auto auto 60px;
+  grid-template-rows: 40px 40px 1fr 60px auto auto 60px 60px;
   gap: 10px;
-
 }
+
+form input, form select{
+  text-align: center;
+  border-style: solid;
+}
+
 
 .email{
 grid-column: 1 / span 2;
 grid-row: 1 / span 1;
+border-color: var(--accent);
+border-width: 2px;
+border-radius: 10px;
+border:none;
+background: var(--lightgray);
 }
 
 .name1{
@@ -828,16 +855,38 @@ grid-row: 1 / span 1;
   grid-row: 2 / span 1;
 }
 
+.name,.plus1Name{
+  border-color: var(--accent);
+  border-width: 2px;
+  border-radius: 10px;
+  border:none;
+  background: var(--lightgray);
+}
+
 #meal1{
   grid-column: 2 / span 1;
   grid-row: 2 / span 1;
 }
 
-.secondQ,.switch{
-  grid-row: 4;
+#meal1,#meal2{
+  border-color: var(--accent);
+  border-width: 2px;
+  border-radius: 10px;
+  border:none;
+  background: var(--lightgray);
+  color:var(--graytext);
 }
 
-.allergies{
+.secondQ,.switch{
+  grid-row: 4;
+  align-self:center;
+}
+
+.brunchQ,.switch2{
+  grid-row: 7;
+}
+
+.allergies,.allergies2{
   grid-column: 1 / span 2;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -846,19 +895,18 @@ grid-row: 1 / span 1;
 }
 
 .allergies>label,.allergies2>label{
-  background: var(--white);
-  color:var(--accent);
-  padding: 5px 12px;
+  background: var(--gray);
+  color:var(--graytext);
+  padding: 0px 12px;
   border-radius: 30px;
   grid-row: 2;
   align-self: center;
   display: grid;
   align-items: center;
   text-align: center;
-  border:solid 2px var(--accent);
-  font-size: 12px;
+  font-size: 16px;
+  height: 120%;
 }
-
 .allergies2{
   display: none;
   grid-column: 1 / span 2;
@@ -867,15 +915,10 @@ grid-row: 1 / span 1;
   column-gap: 10px;
   padding-bottom: 15px;
 }
-
-.allergies>p{
+.allergies>p,.allergies2>p{
   grid-row: 1 / span 1;
   grid-column: 1 / span 4;
-}
-
-.allergies2>p{
-  grid-row: 1 / span 1;
-  grid-column: 1 / span 4;
+  margin-top: 0;
 }
 
 input[type='checkbox']{
@@ -884,36 +927,29 @@ input[type='checkbox']{
   opacity: 0;
 }
 
-#gf:checked+.gflabel,#nuts:checked+.nutlabel,#vegan:checked+.veganlabel{
+#gf:checked+.gflabel,#nuts:checked+.nutlabel,#vegan:checked+.veganlabel,#gf2:checked+.gflabel2,#nuts2:checked+.nutlabel2,#vegan2:checked+.veganlabel2{
 background-color: var(--accent);
   color:var(--white);
 }
 
-#otherallergy{
-    grid-row: 2;
-}
-
-.gflabel2,.nutlabel2,.veganlabel2{
-  background: var(--white);
-  color:var(--accent);
-  padding: 5px 8px;
-  border-radius: 5px;
+#otherallergy,#otherallergy2{
   grid-row: 2;
+  height: 120%;
+  padding: 0;
   align-self: center;
-  height: 40px;
-  display: grid;
-  align-items: center;
+  border:none;
+  border-radius: 50px;
   text-align: center;
-  border:solid 2px var(--accent);
+  background-color: var(--accent);
+  color: var(--white);
+  font-size: 16px;
 }
 
-#gf2:checked+.gflabel2,#nuts2:checked+.nutlabel2,#vegan2:checked+.veganlabel2{
-background-color: var(--accent);
-  color:var(--white);
-}
-
-#otherallergy2{
-    grid-row: 2;
+#otherallergy::placeholder,#otherallergy2::placeholder{
+color: var(--graytext);
+font-size: 16px;
+background-color: var(--gray);
+padding: 20px;
 }
 
 .name2{
@@ -922,16 +958,18 @@ background-color: var(--accent);
   height: 60px;
 }
 
+.meal2show{
+  height: 40px;
+}
+
 .meal2{
   grid-column: 2 / span 1;
   grid-row: 5 / span 1;
-  height: 60px;
-
 }
 
 .submitbutton{
   grid-column: 1 / span 2;
-  grid-row: 7 / span 1;
+  grid-row: 8 / span 1;
   border: none;
   border-radius: 20px;
   background-color: var(--accent);
@@ -1758,7 +1796,7 @@ font-size: 28px;
 
 form{
   grid-template-columns: 50% 50%;
-  grid-template-rows: 60px 60px 1fr 60px auto auto 60px;
+  grid-template-rows: 40px 40px 1fr 60px auto auto 60px;
 }
 
 .centered h1{
