--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,15 @@ grid-column: 2;
   margin: auto;
 }
 
+.switch3 {
+  position: relative;
+  display: inline-block;
+  width: 120px;
+  height: 34px;
+  margin-top: 10px;
+  margin: auto;
+}
+
 .switch input { 
   opacity: 0;
   width: 0;
@@ -831,7 +840,7 @@ height: 300px;
 form{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 40px 40px 1fr auto auto auto auto 60px;
+  grid-template-rows: 60px 40px 40px 1fr auto auto auto auto 60px;
   gap: 10px;
 }
 
@@ -843,7 +852,7 @@ form input, form select{
 
 .email{
 grid-column: 1 / span 2;
-grid-row: 1 / span 1;
+grid-row: 2 / span 1;
 border-color: var(--accent);
 border-width: 2px;
 border-radius: 10px;
@@ -853,7 +862,7 @@ background: var(--lightgray);
 
 .name1{
   grid-column: 1 / span 1;
-  grid-row: 2 / span 1;
+  grid-row: 3 / span 1;
 }
 
 .name,.plus1Name{
@@ -866,7 +875,7 @@ background: var(--lightgray);
 
 #meal1{
   grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
+  grid-row: 3 / span 1;
 }
 
 #meal1,#meal2{
@@ -879,12 +888,17 @@ background: var(--lightgray);
 }
 
 .secondQ,.switch{
-  grid-row: 4;
+  grid-row: 5;
   align-self:center;
 }
 
 .brunchQ,.switch2{
-  grid-row: 7;
+  grid-row: 8;
+}
+
+
+.attendQ,.switch3{
+  grid-row: 1;
 }
 
 .allergies,.allergies2{
@@ -969,7 +983,7 @@ overflow: hidden;
 
 .name2{
   grid-column: 1 / span 1;
-  grid-row: 5 / span 1;
+  grid-row: 6 / span 1;
   height: 60px;
 }
 
@@ -979,12 +993,12 @@ overflow: hidden;
 
 .meal2{
   grid-column: 2 / span 1;
-  grid-row: 5 / span 1;
+  grid-row: 6 / span 1;
 }
 
 .submitbutton{
   grid-column: 1 / span 2;
-  grid-row: 8 / span 1;
+  grid-row: 9 / span 1;
   border: none;
   border-radius: 20px;
   background-color: var(--accent);
@@ -1803,7 +1817,7 @@ font-size: 28px;
 
 form{
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 40px 40px 1fr auto auto auto auto 60px;
+  grid-template-rows: 60px 40px 40px 1fr auto auto auto auto 60px;
   gap: 10px;
 }
 
