--- a/css/style.css
+++ b/css/style.css
@@ -2079,3 +2079,192 @@ filter: contrast(90%) brightness(100%);
 .scheduleref{
   color: var(--accent) !important;
 }
+
+.notice{
+  text-align: center;
+  color: var(--accent);
+  font-size: 1.4rem;
+  font-family: 'EB Garamond';
+}
+
+.schedule{
+  display: grid;
+  grid-template-columns: 80px 1fr 400px 1fr ;
+  grid-template-rows: auto auto auto auto auto auto;
+  align-items: center;
+  justify-items: center;
+  margin: 80px auto 80px auto;
+  row-gap: 100px;
+  width: 80%;
+}
+
+.datetime{
+  font-size: 3.5rem;
+}
+
+.timelabel{
+  font-size: 1.8rem;
+  color: var(--accent);
+  text-transform: uppercase;
+  text-align: center;
+  padding-right: 20px;
+  font-family: 'EB Garamond';
+  margin:0;
+}
+
+
+.timelabel:first-line{
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+
+
+.timeimage{
+  max-width: 80px;
+  max-height: 80px;
+  padding-left: 20px;
+}
+
+
+.location{
+  font-size: 1.2rem;
+  color: var(--accent);
+}
+
+.location:hover{
+  text-decoration: underline;
+}
+
+.datetimeline1{
+  grid-row: 1 / span 1;
+  grid-column: 1;
+  transform: rotate(-90deg);
+  width: 150px;
+}
+
+
+.welcome{
+  grid-row: 1;
+  grid-column: 3;
+  position: relative;
+}
+
+.welcome::after{
+  content: "";
+  position: absolute;
+  top: 200px;
+  left: -400px;
+  width: 1000px;
+  height: 2px;
+  background-color: var(--accent);
+  opacity: 1; /* Adjust opacity as needed */
+  z-index: 12; /* Place the ::after element behind the content */
+}
+
+.welcomeimg{
+  grid-row: 1;
+  grid-column: 4;
+  justify-self: start;
+}
+
+
+
+.datetimeline2{
+  grid-row: 2 / span 4;
+  grid-column: 1;
+  transform: rotate(-90deg);
+  width: 500px;
+}
+
+
+.ceremony{
+  grid-row: 2;
+  grid-column: 3;
+  position: relative;
+}
+
+.ceremony::after,.cocktail::after,.reception::after{
+  content: "";
+  position: absolute;
+  top: 145px;
+  left: 50%;
+  width: 2px;
+  height: 80px;
+  background-color: var(--accent);
+  opacity: 1; /* Adjust opacity as needed */
+  z-index: 12; /* Place the ::after element behind the content */
+}
+
+
+.ceremonyimg{
+  grid-row: 2;
+  grid-column: 2;
+  justify-self: end;
+}
+
+.cocktail{
+  grid-row: 3;
+  grid-column: 3;
+  position: relative;
+}
+
+.cocktailimg{
+  grid-row: 3;
+  grid-column: 4;
+  justify-self: start;
+}
+
+.reception{
+  grid-row: 4;
+  grid-column: 3;
+  position: relative;
+}
+
+.receptionimg{
+  grid-row: 4;
+  grid-column: 2;
+  justify-self: end;
+}
+
+.afterparty{
+  grid-row: 5;
+  grid-column: 3;
+}
+
+.afterpartyimg{
+  grid-row: 5;
+  grid-column: 4;
+  justify-self: start;
+}
+
+.datetimeline3{
+  grid-row: 6 / span 1;
+  grid-column: 1;
+  transform: rotate(-90deg);
+  width: 200px;
+}
+
+.brunch{
+  grid-row: 6;
+  grid-column: 3;
+  position: relative;
+}
+
+.brunch::after{
+  content: "";
+  position: absolute;
+  top: -70px;
+  left: -400px;
+  width: 1000px;
+  height: 2px;
+  background-color: var(--accent);
+  opacity: 1; /* Adjust opacity as needed */
+  z-index: 12; /* Place the ::after element behind the content */
+}
+
+.brunchimg{
+  grid-row: 6;
+  grid-column: 2;
+  justify-self: end;
+}
+
