--- a/css/style.css
+++ b/css/style.css
@@ -2317,3 +2317,26 @@ filter: contrast(90%) brightness(100%);
 .fa-calendar-days{
 padding-right: 25px;  
 }
+
+.thanksh1{
+  color: var(--accent);
+}
+
+.thanksp{
+  text-align: center;
+  color: var(--accent);
+}
+
+.schedulebutton2{
+  background-color: var(--accent);
+  font-size: 2.2rem;
+  cursor: pointer;
+  margin-top: 60px;
+  border: none;
+  border-radius: 12px;
+  padding: 10px 40px 10px 40px;
+  color: var(--background);
+  text-transform: uppercase;
+  font-family: 'Inter';
+  font-weight: 600;
+}
